# fb-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  design.txt  install_plan.md  log.txt
.codegraph/: daemon.pid
docs/superpowers/plans/: 2026-06-12-cross-compile-auto-detect.md  2026-06-12-eabi-mcu-and-dependency-fix-plan.md  2026-06-12-toolchain-config-refactor-plan.md  2026-06-12-toolchain-template-and-auto-detect-plan.md  2026-06-13-compile-commands-lsp.md  2026-06-14-install-sync-integration.md  2026-06-14-zig-build-system-plan.md  2026-06-22-fb-gen-build-run-plan.md
docs/superpowers/specs/: 2026-06-12-cross-compile-auto-detect-design.md  2026-06-12-eabi-mcu-and-dependency-fix-design.md  2026-06-12-toolchain-config-refactor-design.md  2026-06-12-toolchain-template-and-auto-detect-design.md  2026-06-13-compile-commands-lsp-design.md  2026-06-14-install-sync-integration-design.md  2026-06-14-zig-build-system-design.md  2026-06-22-fb-gen-build-run-design.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/core/: analyzer.rs  discoverer.rs  generator.rs  inferrer.rs  mod.rs  toolchain_detect.rs  zig_generator.rs
src/install/: bridge.rs  catalogue.rs  downloader.rs  environment.rs  manifest.rs  mod.rs
src/models/: dependency.rs  error.rs  mod.rs  module.rs  project.rs
src/orchestration/: cache.rs  mod.rs  query.rs  reporter.rs  watcher.rs  workflow.rs
src/scanner/: fff_wrapper.rs  fs_adapter.rs  mod.rs
tests/: integration.rs
