[package]
name = "fb-gen"
version = "0.1.5"
edition = "2021"
description = "Fast Build Generate — 自动扫描 C/C++ 项目并生成 CMake 配置"

[lib]
name = "fb_gen"
path = "src/lib.rs"

[[bin]]
name = "fb-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fff-search = "0.9"
tera = "1"
petgraph = { version = "0.6", features = ["serde-1"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
colored = "3"
indicatif = "0.17"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
ureq = { version = "3", features = ["gzip"] }
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
